Rearranged package structure, added test classes and Ant support