@@ -1,37 +1,39 @@
-<project name="testproj" default="run" basedir=".">
-    <description>
-        Application build file
-    </description>
-    <property name="src" location="src"/>
-    <property name="build" location="build"/>
-    <property name="dest" location="dest"/>
-    <property name="lib" location="lib"/>
-    <property name="project.name" value="testproj"/>
-    <property name="main.class" location="src/view/GUI.java"/>
+<project name="testproj">
+
+    <property name="project.name" value="${ant.project.name}"/>
+    <property name="main.class" value="ui.MainUI"/>
 
     <path id="lib.classpath">
-        <pathelement location="${lib}"/>
+        <fileset dir="lib" includes="**/*.jar"/>
     </path>
 
-    <target name="initialize" description="create build directory">
-        <tstamp/>
-        <mkdir dir="${build}"/>
+    <target name="clean">
+        <delete dir="build"/>
+        <delete dir="dest"/>
     </target>
 
-    <target name="compile" depends="initialize" description="compile the source">
-        <javac srcdir="${src}" destdir="${build}" includeAntRuntime="yes" classpathref="lib.classpath"/>
-    </target>
+    <target name="compile" depends="clean">
+        <mkdir dir="build"/>
+        <javac srcdir="src" destdir="build" includeantruntime="false">
+            <modulepath path="lib/javafx"/>
+            <compilerarg line="--add-modules javafx.controls,javafx.fxml"/>
+            <classpath refid="lib.classpath"/>
+        </javac>
 
-    <target name="distribute" depends="compile" description="generate the distribution">
-        <jar jarfile="${dest}/${project.name}-${DSTAMP}.jar" basedir="${build}">
+        <mkdir dir="dest"/>
+        <jar destfile="dest/${project.name}.jar" basedir="build">
             <manifest>
                 <attribute name="Main-Class" value="${main.class}"/>
             </manifest>
+            <zipgroupfileset dir="lib" includes="**/*.jar"/>
         </jar>
     </target>
 
-    <target name="run" depends="distribute" description="run application">
-        <java jar="dest/${project.name}-${DSTAMP}.jar" fork="true"/>
+    <target name="run" depends="compile">
+        <java jar="dest/${project.name}.jar" fork="true">
+            <modulepath path="lib/javafx"/>
+            <jvmarg line="--add-modules javafx.controls,javafx.fxml"/>
+        </java>
     </target>
 
 </project>
